--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Roboto Mono", monospace;
   text-align: center;
-  background-image: url("https://caelum-online-public.s3.amazonaws.com/assets-imersaodev/background-aluraflix.png");
+  background-image: url("https://www.alura.com.br/assets/img/imersoes/dev-2021/dia-04-aluraflix-e-filmes.png");
   background-color: #000000;
   background-size: cover;
   background-position: center top;
@@ -25,7 +25,6 @@ body {
 
 .page-logo {
   width: 200px;
-  margin-bottom: 20px;
 }
 
 .alura-logo {
@@ -35,11 +34,34 @@ body {
   right: 10px;
 }
 
-body > img {
+#listaFilmes img {
   margin: 10px;
+  max-height: 250px;
 }
 
-img {
-  max-height: 250px;
-  width: 175.97px;
+.form-wrapper {
+  margin: 0 0 15px;
+}
+
+.form-wrapper input {
+  display: block;
+  margin: 0 auto;
+  padding: 10px 15px;
+}
+
+.form-wrapper button {
+  border: 0;
+  color: #ffffff;
+  background: #da1e26;
+  font-weight: bold;
+  padding: 15px 20px;
+  font-size: 16px;
+  border-radius: 4px;
+  margin-top: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.form-wrapper button:hover {
+  opacity: 0.8;
 }
